# qubes-notification-proxy

./: .qubesbuilder  Cargo.toml  TASKS.md  rust-notification-emitter.spec.in
debian/: changelog  control  qubes-notification-agent.install  qubes-notification-daemon.install  rules
notification-emitter/: Cargo.toml  lib.rs
notification-emitter/src/: lib.rs
notification-proxy/: Cargo.toml
src/: 90-qubes-notification-agent.preset  lib.rs  maps.rs  notifications.rs  qubes-notification-agent.service  qubes-notifications.preset  qubes-notifications.service
