[package]
name = "notification_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notification-emitter = { version = "0.1.0", path = "notification-emitter" }
notification-proxy = { version = "0.1.0", path = "notification-proxy" }
zbus = { version = "3.14.1", features = ["tokio"], default-features = false }

[workspace]
members = ["notification-emitter", "notification-proxy"]
