[package]
name = "notification-emitter"
version = "1.0.0"
edition = "2021"
license = "GPLv3+"
description = """
Notification proxy for Qubes OS
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitflags = { version = ">=1.3.2", default-features = false }
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false }
serde = "1.0.185"
serde_derive = "1.0.185"
tokio = { version = "1.29.1", features = ["io-std", "rt", "macros"], default-features = false }
zbus = { version = "5", features = ["tokio"], default-features = false }
nix = { version = ">=0.26.2, <0.30.0", features = ["user"], default-features = false }

[[bin]]
name = "notification-proxy-server"

[[bin]]
name = "notification-proxy-client"

[features]
unicode = []
default = ["unicode"]
