[package]
name = "notification-emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitflags = "1.3.2"
serde = "1.0.185"
serde_derive = "1.0.185"
tokio = { version = "1.29.1", features = ["io-std", "rt", "macros"] }
zbus = { version = "3.14.1", features = ["tokio"] }

[[bin]]
name = "notification-proxy-server"

[[bin]]
name = "notification-proxy-client"
